# resources/model_create_mayor.go
@@ -1,158 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the CreateMayor type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &CreateMayor{}
-
-// CreateMayor struct for CreateMayor
-type CreateMayor struct {
-	Data CreateMayorData `json:"data"`
-}
-
-type _CreateMayor CreateMayor
-
-// NewCreateMayor instantiates a new CreateMayor object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewCreateMayor(data CreateMayorData) *CreateMayor {
-	this := CreateMayor{}
-	this.Data = data
-	return &this
-}
-
-// NewCreateMayorWithDefaults instantiates a new CreateMayor object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewCreateMayorWithDefaults() *CreateMayor {
-	this := CreateMayor{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *CreateMayor) GetData() CreateMayorData {
-	if o == nil {
-		var ret CreateMayorData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *CreateMayor) GetDataOk() (*CreateMayorData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *CreateMayor) SetData(v CreateMayorData) {
-	o.Data = v
-}
-
-func (o CreateMayor) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o CreateMayor) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *CreateMayor) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varCreateMayor := _CreateMayor{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varCreateMayor)
-
-	if err != nil {
-		return err
-	}
-
-	*o = CreateMayor(varCreateMayor)
-
-	return err
-}
-
-type NullableCreateMayor struct {
-	value *CreateMayor
-	isSet bool
-}
-
-func (v NullableCreateMayor) Get() *CreateMayor {
-	return v.value
-}
-
-func (v *NullableCreateMayor) Set(val *CreateMayor) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableCreateMayor) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableCreateMayor) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableCreateMayor(val *CreateMayor) *NullableCreateMayor {
-	return &NullableCreateMayor{value: val, isSet: true}
-}
-
-func (v NullableCreateMayor) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableCreateMayor) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
