# resources/model_create_mayor_data.go
@@ -1,186 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the CreateMayorData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &CreateMayorData{}
-
-// CreateMayorData struct for CreateMayorData
-type CreateMayorData struct {
-	Type string `json:"type"`
-	Attributes CreateMayorDataAttributes `json:"attributes"`
-}
-
-type _CreateMayorData CreateMayorData
-
-// NewCreateMayorData instantiates a new CreateMayorData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewCreateMayorData(type_ string, attributes CreateMayorDataAttributes) *CreateMayorData {
-	this := CreateMayorData{}
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewCreateMayorDataWithDefaults instantiates a new CreateMayorData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewCreateMayorDataWithDefaults() *CreateMayorData {
-	this := CreateMayorData{}
-	return &this
-}
-
-// GetType returns the Type field value
-func (o *CreateMayorData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *CreateMayorData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *CreateMayorData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *CreateMayorData) GetAttributes() CreateMayorDataAttributes {
-	if o == nil {
-		var ret CreateMayorDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *CreateMayorData) GetAttributesOk() (*CreateMayorDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *CreateMayorData) SetAttributes(v CreateMayorDataAttributes) {
-	o.Attributes = v
-}
-
-func (o CreateMayorData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o CreateMayorData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *CreateMayorData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varCreateMayorData := _CreateMayorData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varCreateMayorData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = CreateMayorData(varCreateMayorData)
-
-	return err
-}
-
-type NullableCreateMayorData struct {
-	value *CreateMayorData
-	isSet bool
-}
-
-func (v NullableCreateMayorData) Get() *CreateMayorData {
-	return v.value
-}
-
-func (v *NullableCreateMayorData) Set(val *CreateMayorData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableCreateMayorData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableCreateMayorData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableCreateMayorData(val *CreateMayorData) *NullableCreateMayorData {
-	return &NullableCreateMayorData{value: val, isSet: true}
-}
-
-func (v NullableCreateMayorData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableCreateMayorData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
