# resources/model_transfer_mayor.go
@@ -1,158 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the TransferMayor type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &TransferMayor{}
-
-// TransferMayor struct for TransferMayor
-type TransferMayor struct {
-	Data TransferMayorData `json:"data"`
-}
-
-type _TransferMayor TransferMayor
-
-// NewTransferMayor instantiates a new TransferMayor object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewTransferMayor(data TransferMayorData) *TransferMayor {
-	this := TransferMayor{}
-	this.Data = data
-	return &this
-}
-
-// NewTransferMayorWithDefaults instantiates a new TransferMayor object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewTransferMayorWithDefaults() *TransferMayor {
-	this := TransferMayor{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *TransferMayor) GetData() TransferMayorData {
-	if o == nil {
-		var ret TransferMayorData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *TransferMayor) GetDataOk() (*TransferMayorData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *TransferMayor) SetData(v TransferMayorData) {
-	o.Data = v
-}
-
-func (o TransferMayor) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o TransferMayor) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *TransferMayor) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varTransferMayor := _TransferMayor{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varTransferMayor)
-
-	if err != nil {
-		return err
-	}
-
-	*o = TransferMayor(varTransferMayor)
-
-	return err
-}
-
-type NullableTransferMayor struct {
-	value *TransferMayor
-	isSet bool
-}
-
-func (v NullableTransferMayor) Get() *TransferMayor {
-	return v.value
-}
-
-func (v *NullableTransferMayor) Set(val *TransferMayor) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableTransferMayor) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableTransferMayor) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableTransferMayor(val *TransferMayor) *NullableTransferMayor {
-	return &NullableTransferMayor{value: val, isSet: true}
-}
-
-func (v NullableTransferMayor) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableTransferMayor) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
