# resources/model_transfer_mayor_data.go
@@ -1,216 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"github.com/google/uuid"
-	"bytes"
-	"fmt"
-)
-
-// checks if the TransferMayorData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &TransferMayorData{}
-
-// TransferMayorData struct for TransferMayorData
-type TransferMayorData struct {
-	// invite id
-	Id uuid.UUID `json:"id"`
-	Type string `json:"type"`
-	Attributes TransferMayorDataAttributes `json:"attributes"`
-}
-
-type _TransferMayorData TransferMayorData
-
-// NewTransferMayorData instantiates a new TransferMayorData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewTransferMayorData(id uuid.UUID, type_ string, attributes TransferMayorDataAttributes) *TransferMayorData {
-	this := TransferMayorData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewTransferMayorDataWithDefaults instantiates a new TransferMayorData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewTransferMayorDataWithDefaults() *TransferMayorData {
-	this := TransferMayorData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *TransferMayorData) GetId() uuid.UUID {
-	if o == nil {
-		var ret uuid.UUID
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *TransferMayorData) GetIdOk() (*uuid.UUID, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *TransferMayorData) SetId(v uuid.UUID) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *TransferMayorData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *TransferMayorData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *TransferMayorData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *TransferMayorData) GetAttributes() TransferMayorDataAttributes {
-	if o == nil {
-		var ret TransferMayorDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *TransferMayorData) GetAttributesOk() (*TransferMayorDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *TransferMayorData) SetAttributes(v TransferMayorDataAttributes) {
-	o.Attributes = v
-}
-
-func (o TransferMayorData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o TransferMayorData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *TransferMayorData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varTransferMayorData := _TransferMayorData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varTransferMayorData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = TransferMayorData(varTransferMayorData)
-
-	return err
-}
-
-type NullableTransferMayorData struct {
-	value *TransferMayorData
-	isSet bool
-}
-
-func (v NullableTransferMayorData) Get() *TransferMayorData {
-	return v.value
-}
-
-func (v *NullableTransferMayorData) Set(val *TransferMayorData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableTransferMayorData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableTransferMayorData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableTransferMayorData(val *TransferMayorData) *NullableTransferMayorData {
-	return &NullableTransferMayorData{value: val, isSet: true}
-}
-
-func (v NullableTransferMayorData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableTransferMayorData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
