# resources/model_transfer_mayor_data_attributes.go
@@ -1,160 +1,0 @@
-/*
-cities-svc API
-
-API documentation for cities-svc
-
-API version: 0.1.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"github.com/google/uuid"
-	"bytes"
-	"fmt"
-)
-
-// checks if the TransferMayorDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &TransferMayorDataAttributes{}
-
-// TransferMayorDataAttributes struct for TransferMayorDataAttributes
-type TransferMayorDataAttributes struct {
-	// ID of the user to be assigned as the new mayor
-	UserId uuid.UUID `json:"user_id"`
-}
-
-type _TransferMayorDataAttributes TransferMayorDataAttributes
-
-// NewTransferMayorDataAttributes instantiates a new TransferMayorDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewTransferMayorDataAttributes(userId uuid.UUID) *TransferMayorDataAttributes {
-	this := TransferMayorDataAttributes{}
-	this.UserId = userId
-	return &this
-}
-
-// NewTransferMayorDataAttributesWithDefaults instantiates a new TransferMayorDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewTransferMayorDataAttributesWithDefaults() *TransferMayorDataAttributes {
-	this := TransferMayorDataAttributes{}
-	return &this
-}
-
-// GetUserId returns the UserId field value
-func (o *TransferMayorDataAttributes) GetUserId() uuid.UUID {
-	if o == nil {
-		var ret uuid.UUID
-		return ret
-	}
-
-	return o.UserId
-}
-
-// GetUserIdOk returns a tuple with the UserId field value
-// and a boolean to check if the value has been set.
-func (o *TransferMayorDataAttributes) GetUserIdOk() (*uuid.UUID, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.UserId, true
-}
-
-// SetUserId sets field value
-func (o *TransferMayorDataAttributes) SetUserId(v uuid.UUID) {
-	o.UserId = v
-}
-
-func (o TransferMayorDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o TransferMayorDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["user_id"] = o.UserId
-	return toSerialize, nil
-}
-
-func (o *TransferMayorDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"user_id",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varTransferMayorDataAttributes := _TransferMayorDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varTransferMayorDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = TransferMayorDataAttributes(varTransferMayorDataAttributes)
-
-	return err
-}
-
-type NullableTransferMayorDataAttributes struct {
-	value *TransferMayorDataAttributes
-	isSet bool
-}
-
-func (v NullableTransferMayorDataAttributes) Get() *TransferMayorDataAttributes {
-	return v.value
-}
-
-func (v *NullableTransferMayorDataAttributes) Set(val *TransferMayorDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableTransferMayorDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableTransferMayorDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableTransferMayorDataAttributes(val *TransferMayorDataAttributes) *NullableTransferMayorDataAttributes {
-	return &NullableTransferMayorDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableTransferMayorDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableTransferMayorDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
